--- a/master.tex
+++ b/master.tex
@@ -12,6 +12,8 @@
 \begin{document}
 \maketitle
 \tableofcontents
+\chapter{Introduction}
+	\subfile{Introduction}
 
 \chapter{Inductive Learning}
     \subfile{Strategy}
