Wrote section on general algorithm, started subsection about PDDL example implementation

--- a/Strategy.tex
+++ b/Strategy.tex
@@ -5,17 +5,17 @@
 
 
 	\begin{comment}
-	
+
 	    \section*{Sec1}
-	
+
 	    Learning has two important steps to it, the first is figuring out
 	    what to do in order to learn about something and the second is analysis
 	    of what occured to understand and actually learn about it.
-	
-	    
+
+
 	    Analysing an outcome is about figuring out what occured and what did
 	    not occur. For instance if one pressed
-	
+
 	    In a STRIPS domain, all actions are absolute thus we know that if
 	    an action changed the state then the action's preconditions was satisfied
 	    and all predicates added
@@ -23,7 +23,7 @@
 
 
 
-    \section*{Learning Strategy}
+    \section*{Learning Strategies} \label{sec:strats}
 
     Learning is a gradual process of trial and error, testing and analysis.
     In the initial state of an agent it will know nothing, thus it must
@@ -32,7 +32,7 @@
     you would have no way of knowning what occurs once you press them
     and if you have no teacher that can inform you, then only trough testing
     by pressing the buttons can you find out.
-    
+
     In order for an agent to learn its action-schema it must use a strategy
     which informs it on what actions it must take in order to achieve
     its goals or learn something that allows it to achieve its goals.
@@ -169,15 +169,8 @@
     only one specific goal but rather to understand the entire domain.
     \end{itemize}
 
-    \section*{Algorithm}
-    \begin{enumerate}
-    \item Determine action based on strategy
-    \item If no action is found ask teacher for help, repeat from step 1 if
-    teacher can help. End if not.
-    \item Perform action
-    \item Analyse new state through inductive reasoning
-    \item If reached goal: End
-    \item Repeat\end{enumerate}
+    \section{Algorithm}
+		\subfile{Algorithm}
 
 
 \end{document}
