--- a/master.tex
+++ b/master.tex
@@ -7,6 +7,9 @@
 \usepackage[english]{babel}
 \usepackage{subfiles}
 \usepackage{cite}
+\usepackage[noend]{algpseudocode}
+% \usepackage{algpseudocode}
+\usepackage{algorithm}
 
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
