Added notes on constraints in conditional effects

--- a/TransitionLearning.tex
+++ b/TransitionLearning.tex
@@ -66,4 +66,7 @@
 \section{Preconditions}
 \subfile{TransitionLearning/Preconditions}
 
+\section{Conditional Effects}
+\subfile{TransitionLearning/Conditionals}
+
 \end{document}
