--- a/master.tex
+++ b/master.tex
@@ -8,8 +8,8 @@
 \usepackage{subfiles}
 \usepackage{cite}
 \usepackage[noend]{algpseudocode}
-% \usepackage{algpseudocode}
 \usepackage{algorithm}
+\usepackage{graphicx}
 
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
