--- a/refs.bib
+++ b/refs.bib
@@ -10,3 +10,11 @@ title = {{Efficient Learning of Action Schemas and Web-Service Descriptions.}},
 url = {http://www.aaai.org/Papers/AAAI/2008/AAAI08-114.pdf},
 year = {2008}
 }
+@masterthesis{BS2011,
+abstract = {This thesis focuses on covering missing academic theory in PDDL. In order to keep scope the work covers only basic STRIPS and the PDDL extensions typing, equality, negative-preconditions and fluents. Quirks in the syntax is discussed and a formal semantic is produced. Applying heuristic extensions to PDDL is analysed and discussed. As a part of the work a generic progression planner is implemented, in order to test suggestions for heuristic extensions and planning techniques.},
+author = {Bornstein, Nicklas and Svane, Simon},
+file = {:Users/srnjcbsn/Google Drive/Kandidat/ep11\_17.pdf:pdf},
+school = {Technical University of Denmark, DTU, DK-2800 Kgs. Lyngby, Denmark},
+title = {{Heuristics in Generic Planning using PDDL}},
+year = {2011}
+}
