--- a/Algorithm.tex
+++ b/Algorithm.tex
@@ -1,6 +1,8 @@
 \documentclass[master.tex]{subfiles}
 \begin{document}
 
+<\texttt{TODO:} Introduce Sokoban example>
+
 In the following, we consider a general algorithm for learning in a virtual world. The algorithm bears resemblance to, and is derived from, the generally accepted scientific method [source], which can be summarized as follows:
 
 \begin{enumerate}
@@ -110,7 +112,7 @@ It is assumed that the mechanics of the environment can be specified as a PDDL d
 
 In order to learn the domain specification, the agent must carry out actions in the environment and observe their outcomes. By applying a given strategy, it can form a hypothetical domain specification based on its current knowledge, and construct a plan which would solve the problem in case the hypothesis is correct. Such a domain specification is analoguous to the \texttt{Hypothesis} from algorithm \ref{algo:science}, while a plan is analoguous to an \texttt{Experiment}.
 
-Conducting an experiment means performing the actions in the plan until an action results in a state that does not match what the hypothesis predicted. In that case, the hypothesis has been disproven, which prompts the result of the experiment to be analysed and merged into the knowledge base. 
+Conducting an experiment means performing the actions in the plan until an action results in a state that does not match what the hypothesis predicted. In that case, the hypothesis has been disproven, which prompts the result of the experiment to be analysed and merged into the knowledge base.
 
 In algorithm \ref{algo:PDDL}, an instantiation of the more general algorithm from \ref{algo:science} is presented.
 
@@ -132,5 +134,7 @@ In algorithm \ref{algo:PDDL}, an instantiation of the more general algorithm fro
         \EndFunction
     \end{algorithmic}
 \end{algorithm}
+
+\subfile{Sokoban}
 
 \end{document}
