--- a/TransitionLearning/Preconditions.tex
+++ b/TransitionLearning/Preconditions.tex
@@ -1,4 +1,3 @@
-
 \documentclass[../master.tex]{subfiles}
 \begin{document}
 
@@ -96,5 +95,55 @@ x^{\pm}:\left(x^{+},x^{-}\right)\in
 C^{\prime}\land\left|x^{\pm}\right|=1\land\left|x^{+}\right|+\left|x^{-}\right|=1\right\}
 \cup K^{\pm} \] As this may prove the presence of predicates in $P^{\pm}$, $C$
 must be updated using rule 2. \end{description}
+
+\subsection{Undiscoverable preconditions}
+
+To see this machinery in action, we once again apply it to the sokoban domain.
+
+\[
+U_0^+ = U_0^- =
+\left\{
+    \begin{gathered}
+        sokobanAt(to), sokobanAt(from), \\
+        clear(to), clear(from), \\
+        goal(to), goal(from), \\
+        vAdj(from), vAdj(to), \\
+        hAdj(from), hAdj(to), \\
+        at(from, to), at(to, from)
+    \end{gathered}
+\right\}
+\]
+
+% GXSO
+%
+% sokoban tries to move left (move-h(t3, t2)), but fails
+
+\begin{align}
+(c^+, c^-) =
+\left(
+    \left\{
+        \begin{gathered}
+            sokobanAt(to), \\
+            clear(to), clear(from), \\
+            goal(to), goal(from), \\
+            vAdj(from), vAdj(to), \\
+            at(from, to), at(to, from)
+        \end{gathered}
+    \right\}
+    ,
+    \left\{
+        \begin{gathered}
+            sokobanAt(from), \\
+            hAdj(from), hAdj(to)
+        \end{gathered}
+    \right\}
+\right)
+\end{align}
+
+% sokoban successfully executes action move-h(t3, t4)
+
+\[
+    U_2^+ = U_0^+ \cap
+\]
 
 \end{document}
