--- a/NonConditional/Effects.tex
+++ b/NonConditional/Effects.tex
@@ -1,4 +1,4 @@
-\documentclass[../master.tex]{subfiles}
+\documentclass[../Master.tex]{subfiles}
 \begin{document}
 
     Consider a state transition $\left(s,a,s'\right)$ where $s$ is a
