--- a/Strategy.tex
+++ b/Strategy.tex
@@ -1,9 +1,5 @@
-\documentclass[master.tex]{subfiles}
+\documentclass[Master.tex]{subfiles}
 \begin{document}
-
-
-	\section{Algorithm} \label{sec:Algorithm}
-		\subfile{Algorithm}
 
 	\begin{comment}
 
