--- a/master.tex
+++ b/master.tex
@@ -29,22 +29,36 @@
 \begin{document}
 \maketitle
 \tableofcontents
+
 \chapter{Introduction}
 	\subfile{Introduction}
 
-\chapter{Inductive Learning}
-    \subfile{Strategy}
+\chapter{Learning} \label{sec:Learning}
+    \subfile{Learning}
 
-\chapter{Inductive reasoning on transitions}
-    \subfile{TransitionLearning}
+\chapter{Non-conditional actions}
+    \subfile{NonConditional}
+
+\chapter{Conditional actions}
+    % \subfile{Conditional}
+
+\chapter{Methods (Implementation)}
 
 \chapter{Results}
+
+\chapter{Discussion}
 
 \chapter{Conclusion}
 
 \chapter{Future work}
 
+% \chapter{Strategy}
+%     \subfile{Strategy}
+%
+% \chapter{Inductive reasoning on transitions}
+%     \subfile{TransitionLearning}
+
 \bibliography{refs}{}
-\bibliographystyle{plain}
+\bibliographystyle{apalike}
 
 \end{document}
