--- a/refs.bib
+++ b/refs.bib
@@ -18,3 +18,19 @@ school = {Technical University of Denmark, DTU, DK-2800 Kgs. Lyngby, Denmark},
 title = {{Heuristics in Generic Planning using PDDL}},
 year = {2011}
 }
+@book{ghallab2004a,
+  title = {Automated planning : Theory and practice},
+  publisher = {Morgan Kaufmann},
+  author = {Ghallab, Malik. and Nau, Dana. and Traverso, Paolo.},
+  pages = {635 s},
+  year = {2004},
+  isbn = {1558608567, 9781558608566}
+}
+@book{Russell,
+ author = {Russell, Stuart J. and Norvig, Peter},
+ title = {Artificial Intelligence: A Modern Approach},
+ year = {2003},
+ isbn = {0137903952},
+ edition = {2},
+ publisher = {Pearson Education},
+}
