--- a/NonConditional/SokobanExample.tex
+++ b/NonConditional/SokobanExample.tex
@@ -1,4 +1,4 @@
-\documentclass[../master.tex]{subfiles}
+\documentclass[../Master.tex]{subfiles}
 \begin{document}
 
 \graphicspath{{.../Graphics/}}
