Implemented MakePlots shake script for converting svg files to .pdf and placing them in correct folder.

--- a/Learning.tex
+++ b/Learning.tex
@@ -8,15 +8,13 @@
     \subfile{Learning/Algorithm}
 
 \section{Strategy examples}
-    \subfile{Learning/PDDLAlgorithm}
 
 \section{PDDL}
 
 \section{Sokoban in PDDL}
+    \subfile{Learning/SokobanPDDL}
 
 \section{PDDL-specific algorithm}
-
-
-\subfile{Sokoban}
+    \subfile{Learning/PDDLAlgorithm}
 
 \end{document}
